@@ -5,7 +5,8 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { Arr } from '@ephox/katamari';
+import { Arr, Optional } from '@ephox/katamari';
+import { Compare, SugarElement, TransformFind } from '@ephox/sugar';
 import DOMUtils from '../api/dom/DOMUtils';
 import Editor from '../api/Editor';
 import { FormatVars, SelectorFormat } from './FormatTypes';
@@ -179,6 +180,14 @@ const matchAll = function (editor: Editor, names: string[], vars: FormatVars) {
   return matchedFormatNames;
 };
 
+const closest = (editor: Editor, names: string[]): string | null => {
+  const isRoot = (elm: SugarElement<Node>) => Compare.eq(elm, SugarElement.fromDom(editor.getBody()));
+  const match = (elm: SugarElement<Node>, name: string): Optional<string> => matchNode(editor, elm.dom, name) ? Optional.some(name) : Optional.none();
+  return Optional.from(editor.selection.getStart(true)).bind((rawElm) =>
+    TransformFind.closest(SugarElement.fromDom(rawElm), (elm) => Arr.findMap(names, (name) => match(elm, name)), isRoot)
+  ).getOrNull();
+};
+
 const canApply = function (editor: Editor, name: string) {
   const formatList = editor.formatter.get(name);
   let startNode, parents, i, x, selector;
@@ -225,6 +234,7 @@ export {
   matchNode,
   matchName,
   match,
+  closest,
   matchAll,
   matchAllOnNode,
   canApply,
