@@ -1,4 +1,5 @@
 Version 5.6.0 (TBD)
+    Added new formatter `closest` API to get the closest matching selection format from a set of formats. #TINY-6479
     Fixed `getContent` with text format returning a new line when the editor is empty #TINY-6281
     Fixed the `visualchars` plugin causing the editor to steal focus when initialized #TINY-6282
     Fixed `fullpage` plugin altering text content in `editor.getContent()` #TINY-6541
